# pathfinding_visualizer

./: CMakeLists.txt  main.cpp
data/: paths.txt  test.csv
include/: custom_data.h  ellipse.h  graphic_text.h  grid.h  grip_map.h  mainwindow.h  map_graphic_widget.h  parse_data.h  parse_result_data.h  path.h
src/: ellipse.cpp  graphic_text.cpp  grip.cpp  grip_map.cpp  mainwindow.cpp  map_graphic_widget.cpp  parse_data.cpp  parse_result_data.cpp  path.cpp
ui/: main_widget.h  main_widget.ui
